@@ -70,7 +70,7 @@ if( WIN32 )
   set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}" )
 else()
   set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2 -pipe -Wno-write-strings -Wno-narrowing -fpermissive -Wsizeof-array-argument -I/usr/include/freetype2" )
-  set( CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g" )
+  set( CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -mcmodel=large" )
   set( CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} -DNDEBUG" )
   set( CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DNDEBUG -ffast-math -fomit-frame-pointer -fno-strict-aliasing" )
   set( CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} -DNDEBUG -ffast-math -fomit-frame-pointer -fno-strict-aliasing -g" )
@@ -666,7 +666,7 @@ endif()
 		target_compile_options(engine PRIVATE "/MP")
 		target_link_libraries( engine ${OS_LIBRARIES} )
 	else ( UNIX )
-		target_link_libraries( engine ${OS_LIBRARIES} -fopenmp -lfreetype )
+		target_link_libraries( engine ${OS_LIBRARIES} -lfreetype )
 	endif() 
 	
 	if( ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" )
@@ -680,7 +680,7 @@ endif()
 	if ( WIN32)
 		target_link_libraries( engine ${OS_LIBRARIES} )
 	else ( UNIX )
-		target_link_libraries( engine ${OS_LIBRARIES} -fopenmp)
+		target_link_libraries( engine ${OS_LIBRARIES} )
 	endif() 
 	
 	# Dushan - This is how visual studio directories (or filters) are generated
